<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.example.s3tests</groupId>
	<artifactId>s3tests_java</artifactId>
	<packaging>jar</packaging>
	<version>1.0.0</version>
	<name>s3tests_java</name>

	<properties>
		<aws.java.sdk.version>2.47.0</aws.java.sdk.version>
		<org.springframework-version>5.1.14.RELEASE</org.springframework-version>
		<org.apache.httpcomponents-version>5.6.1</org.apache.httpcomponents-version>
		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
		<surefireReportsDirectory>./target/results</surefireReportsDirectory>
	</properties>

	<dependencies>
		<!-- DB -->
		<dependency>
			<groupId>org.mariadb.jdbc</groupId>
			<artifactId>mariadb-java-client</artifactId>
			<version>3.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>5.0.1</version>
		</dependency>
		<!-- Http Connection -->
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<version>${org.apache.httpcomponents-version}</version>
		</dependency>
		<!-- Test Runner -->
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<version>1.8.2</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.8.2</version>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>5.8.2</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.8.2</version>
		</dependency>
		<!-- Parser -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>2.3.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.1</version>
		</dependency>
		<!-- INI Reader -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-configuration2</artifactId>
			<version>2.15.1</version>
		</dependency>
		<!-- AWS SDK V1 -->
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-s3</artifactId>
			<version>1.12.797</version>
		</dependency>
		<!-- AWS SDK V2 -->
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>s3</artifactId>
			<version>${aws.java.sdk.version}</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>apache-client</artifactId>
			<version>${aws.java.sdk.version}</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>netty-nio-client</artifactId>
			<version>${aws.java.sdk.version}</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>apache-client</artifactId>
			<version>${aws.java.sdk.version}</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk.crt</groupId>
			<artifactId>aws-crt</artifactId>
			<version>0.46.1</version>
		</dependency>
		<!-- Commons Lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.20.0</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.21.0</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.9.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<reportsDirectory>${surefireReportsDirectory}</reportsDirectory>
					<useFile>false</useFile>
					<trimStackTrace>false</trimStackTrace>
					<properties>
						<configurationParameters>
							junit.jupiter.execution.parallel.enabled = true
							junit.jupiter.execution.parallel.mode.default = concurrent
							junit.jupiter.execution.parallel.mode.classes.default = concurrent
						</configurationParameters>
					</properties>
					<includes>
						<include>Accelerate.java</include>
						<include>Access.java</include>
						<include>ACL.java</include>
						<include>Analytics.java</include>
						<include>Backend.java</include>
						<include>CopyObject.java</include>
						<include>Cors.java</include>
						<include>CSE.java</include>
						<include>DeleteBucket.java</include>
						<include>DeleteObjects.java</include>
						<include>GetObject.java</include>
						<include>GetObjectAttributes.java</include>
						<include>Grants.java</include>
						<include>Inventory.java</include>
						<include>KsanApiTest.java</include>
						<include>LifeCycle.java</include>
						<include>ListBuckets.java</include>
						<include>ListObjects.java</include>
						<include>ListObjectsV2.java</include>
						<include>ListObjectsVersions.java</include>
						<include>Lock.java</include>
						<include>Logging.java</include>
						<include>Metrics.java</include>
						<include>Multipart.java</include>
						<include>Notification.java</include>
						<include>Ownership.java</include>
						<include>Payment.java</include>
						<include>Policy.java</include>
						<include>Post.java</include>
						<include>PutBucket.java</include>
						<include>PutObject.java</include>
						<include>Replication.java</include>
						<include>SelectObjectContent.java</include>
						<include>SSE_C.java</include>
						<include>SSE_S3.java</include>
						<include>Taggings.java</include>
						<include>Versioning.java</include>
						<include>Website.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>21</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>org.example.s3tests.Main</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<descriptors>
						<descriptor>jar-with-dependencies.xml</descriptor>
					</descriptors>
					<archive>
						<manifest>
							<mainClass>org.example.s3tests.Main</mainClass>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.skife.maven</groupId>
				<artifactId>really-executable-jar-maven-plugin</artifactId>
				<version>1.4.1</version>
				<configuration>
					<programFile>s3tests-java</programFile>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>really-executable-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>